--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Starter Template
-author: Panoramedia
-email: panoramedia@gmail.com
+title: 2017 經濟播客競賽
+author: 國立臺北大學。經濟學系
+email: mtlin@gm.ntup.edu.tw
 description: > # this means to ignore newlines until "baseurl:"
   A Site Starter Materialize Templates for Jekyll
 
