--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 title: 2017 經濟播客競賽
 headtitle: 經濟播客競賽
+registrationurl: https://goo.gl/forms/vAD1OE9yiONnz5h32
+uploadurl: https://docs.google.com/forms/d/e/1FAIpQLSdjp6kWOWSgZItYPYR_C101Jfl4V3Bxpcc6iZyiJ6xuZk5EIw/viewform?embedded=true
+mainhosturl: http://www.ntpu.edu.tw/econ/
+cohosturl: https://www.facebook.com/Emajortaiwanforu/
+sponsorurl: https://www.facebook.com/groups/518140268277463/
+
 author: 國立臺北大學。經濟學系
 email: mtlin@gm.ntup.edu.tw
 description: > # this means to ignore newlines until "baseurl:"
