--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ uploadurl: https://docs.google.com/forms/d/e/1FAIpQLSdjp6kWOWSgZItYPYR_C101Jfl4V
 mainhosturl: http://www.ntpu.edu.tw/econ/
 cohosturl: https://www.facebook.com/Emajortaiwanforu/
 sponsorurl: https://www.facebook.com/groups/518140268277463/
+google_analytics: UA-106134356-1
 
 author: 國立臺北大學。經濟學系
 email: mtlin@gm.ntup.edu.tw
