--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ google_analytics: UA-106134356-1
 author: 國立臺北大學。經濟學系
 email: mtlin@gm.ntup.edu.tw
 description: > # this means to ignore newlines until "baseurl:"
-  A Site Starter Materialize Templates for Jekyll
+  2017 國立臺北大學第三屆經濟播客競賽
 
 twitter_username: macrod68
 github_username:  macrod68
