--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,12 @@ mainhosturl: http://www.ntpu.edu.tw/econ/
 cohosturl: https://www.facebook.com/Emajortaiwanforu/
 sponsorurl: https://www.facebook.com/groups/518140268277463/
 
+registrationdeadline: 2017/10/13
+uploaddeadline: 2017/12/24
+exhibitionperiod: 2017/12/27－12/29
+outcomeannouncedate: 2018/1/3
+awarddate: 另行公佈
+
 author: 國立臺北大學。經濟學系
 email: mtlin@gm.ntup.edu.tw
 description: > # this means to ignore newlines until "baseurl:"
