--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: 2017 經濟播客競賽
+title: 2017 經濟播客影展
 headtitle: 經濟播客競賽
 registrationurl: https://goo.gl/forms/vAD1OE9yiONnz5h32
+votingurl: https://goo.gl/forms/j9ETA5HHujG0QjYj2
 uploadurl: https://docs.google.com/forms/d/e/1FAIpQLSdjp6kWOWSgZItYPYR_C101Jfl4V3Bxpcc6iZyiJ6xuZk5EIw/viewform?embedded=true
 mainhosturl: http://www.ntpu.edu.tw/econ/
 cohosturl: https://www.facebook.com/Emajortaiwanforu/
@@ -9,7 +10,7 @@ google_analytics: UA-106134356-1
 
 registrationdeadline: 2017/10/20
 uploaddeadline: 2017/12/24
-exhibitionperiod: 2017/12/27－12/29
+exhibitionperiod: 2017/12/28－12/30
 outcomeannouncedate: 2018/1/3
 awarddate: 另行公佈
 
