--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 2017 經濟播客影展
-headtitle: 經濟播客競賽
+headtitle: 2017 經濟播客影展
 registrationurl: https://goo.gl/forms/vAD1OE9yiONnz5h32
 votingurl: https://goo.gl/forms/j9ETA5HHujG0QjYj2
 uploadurl: https://docs.google.com/forms/d/e/1FAIpQLSdjp6kWOWSgZItYPYR_C101Jfl4V3Bxpcc6iZyiJ6xuZk5EIw/viewform?embedded=true
@@ -17,7 +17,7 @@ awarddate: 另行公佈
 author: 國立臺北大學。經濟學系
 email: mtlin@gm.ntup.edu.tw
 description: > # this means to ignore newlines until "baseurl:"
-  2017 國立臺北大學第三屆經濟播客競賽
+  2017 國立臺北大學第三屆經濟播客影展 線上欣賞好片，投票再抽神祕禮物。
 
 twitter_username: macrod68
 github_username:  macrod68
